--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+:root {
+    --main-color:#d3ad7f;
+    --black:#13131a;
+    --bg:#010103;
+    --border:0.1rem solid rgba(255,255.255,0.3)
+}
+
 * {
     font-family: 'Roboto', sans-serif;
     margin:0;
@@ -10,6 +17,82 @@
     text-transform:capitalize;
     transition:0.2s linear;
 }
-body
-{
+
+html {
+    font-size:62.5%;
+    overflow-x:hidden;
+    scroll-padding-top:9rem;
+    scroll-behavior:smooth;
+
+}
+
+    html::-webkit-scrollbar {
+        width:0.8rem;
+    }
+
+    html::-webkit-scrollbar-track {
+        background:transparent;
+    }
+
+    html::-webkit-scrollbar-thumb {
+        background:#fff;
+        border-radius:5rem;
+    }
+
+
+body{
+    background:var(--bg);
+}
+
+.header {
+    background:cyan;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:1.5rem 7%;
+    border-bottom:var(--border);
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    z-index:1000;
+}
+
+    .header .logo img{
+        height: 6rem;
+    }
+    .header .navbar a{
+        margin:0.1rem;
+        font-size:1.6rem;
+        color:#fff;
+    }
+
+     .header .navbar a:hover {
+         color:var(--main-color);
+         border-bottom: 1rem solid var(--main-color);
+         padding-bottom:0.5rem;
+      }
+
+    .header .icons a {
+        color:#fff;
+        cursor:pointer;
+        font-size:2.5rem;
+        margin-left:2rem;
+        
+    }
+
+.header .icons {
+    display:inline-flex;
+}
+
+#searchbtn {
+    margin-left: 2rem;
+}
+
+#cartbtn {
+    margin-left: 2rem;
+}
+
+#menubtn {
+    margin-left: 2rem;
 }
