--- a/style.css
+++ b/style.css
@@ -95,4 +95,37 @@ body{
 
 #menubtn {
     margin-left: 2rem;
+    display:none;
 }
+.header .searchform {
+    position:absolute;
+    top:115%;right:7%;
+    background:#fff;
+    width:50rem;
+    height:3rem;
+    display:flex;
+    align-items:center;
+    transform:scaleY(0);
+    transform-origin:top;
+
+}
+    .header .searchform input {
+        height:100%;
+        width:100%;
+        font-size:1.6rem;
+        color:var(--black);
+        padding:1rem;
+        text-transform:none;
+
+    }
+
+    .header .searchform label {
+        cursor:pointer;
+        font-size:2.2rem;
+        margin-right:1.5rem;
+        color:var(--black);
+    }
+
+        .header .searchform label:hover {
+            color:var(--main-color);
+        }
