--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ body{
     background:var(--bg);
 }
 
+section {
+    padding:2rem 7%;
+}
+
 .btn {
     margin-top:1rem;
     display:inline-block;
@@ -73,12 +77,13 @@ body{
     z-index:1000;
 }
 
+
     .header .logo img{
         height: 6rem;
     }
 
     .header .navbar a{
-        margin:0.1rem;
+        margin:2.2rem;
         font-size:1.6rem;
         color:#fff;
     }
@@ -120,14 +125,18 @@ body{
     transform-origin:top;
 
 }
-    .header .searchform input {
-        height:100%;
-        width:100%;
-        font-size:1.6rem;
-        color:var(--black);
-        padding:1rem;
-        text-transform:none;
 
+    .header .searchform.active {
+        transform: scaleY(1);
+    }
+
+    .header .searchform input {
+        height: 100%;
+        width: 100%;
+        font-size: 1.6rem;
+        color: var(--black);
+        padding: 1rem;
+        text-transform: none;
     }
 
     .header .searchform label {
@@ -200,16 +209,20 @@ body{
     .header {
         padding:1.5rem 2rem;
     }
+
+    section {
+        padding: 2rem;
+    }
 }
 
-@media (max-width:991px) {
+@media (max-width:768px) {
     #menubtn {
         display:inline-block;
     }
 
     .header .navbar {
         position:absolute;
-        top:100%;right:0;
+        top:100%;right:-100%;
         background:#fff;
         width:30rem;
         height:calc(100vh - 9.5rem);
@@ -226,5 +239,59 @@ body{
             padding:0.5rem;
             font-size:2rem;
         }
+
+    .header .searchform {
+        width:90%;
+        right:2rem;
+    }
+
+    .home {
+        background-position:left;
+        justify-content:center;
+        text-align:center;
+    }
+
+    .home .content h3{
+        font-size:4.5rem;
+    }
+        .home .content p {
+            font-size: 1.5rem;
+        }
 }
+
+@media (max-width:450px) {
+    html {
+        font-size: 50%;
+    }
+
+    
+}
+
+
+.home {
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    background:url(images/home.jpg) no-repeat;
+    background-size:cover;
+    background-position:center;
+}
+
+    .home .content {
+        max-width:60rem;
+    }
+
+        .home .content h3 {
+            font-size:6rem;
+            text-transform:uppercase;
+            color:#fff;
+        }
+
+        .home .content p {
+            font-size: 2rem;
+            font-weight:lighter;
+            line-height:1.8;
+            padding:1rem 0;
+            color: #eee;
+        }
         
